kubernetes/templates/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-statefulset
spec:
  serviceName: kafka-service
  replicas: 1
  minReadySeconds: 120
  selector:
    matchLabels:
      name: kafka
  template:
    metadata:
      labels:
        name: kafka
    spec:
      containers:
        - name: kafka-container
          image: confluentinc/cp-kafka:7.4.4
          ports:
            - containerPort: 9091
            - containerPort: 9092
          volumeMounts:
            - name: kafka-volume
              mountPath: /var/lib/kafka
          readinessProbe:
            tcpSocket:
              port: 9091
            timeoutSeconds: 5
            periodSeconds: 5
            initialDelaySeconds: 60
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "sh /bin/kafka-broker-api-versions --bootstrap-server=localhost:9091"
            timeoutSeconds: 5
            periodSeconds: 5
            initialDelaySeconds: 60
  volumeClaimTemplates:
    - metadata:
        name: kafka-volume
      spec:
        storageClassName: kafka-volume
        accessModes: ["ReadWriteMany"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    name: kafka
spec:
  type: NodePort
  selector:
    name: kafka
  ports:
    - port: 9091
      name: port0
    - port: 9092
      name: port1
