kubernetes/templates/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  serviceName: redis-service
  replicas: 1
  minReadySeconds: 120
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - name: redis-container
          image: 'redis:alpine'
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-volume
              mountPath: /var/lib/redis
  volumeClaimTemplates:
    - metadata:
        name: redis-volume
      spec:
        storageClassName: redis-volume
        accessModes: [ "ReadWriteMany" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: NodePort
  selector:
    name: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
