kubernetes/templates/zipkin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zipkin-statefulset
spec:
  serviceName: zipkin-service
  replicas: 1
  minReadySeconds: 120
  selector:
    matchLabels:
      name: zipkin
  template:
    metadata:
      labels:
        name: zipkin
    spec:
      containers:
        - name: zipkin-container
          image: openzipkin/zipkin:3.4
          ports:
            - containerPort: 9411
          readinessProbe:
            httpGet:
              path: /
              port: 9411
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /
              port: 9411
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 15
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  labels:
    name: zipkin
spec:
  type: NodePort
  selector:
    name: zipkin
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
      name: web
